<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/pb_loader_indicator"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:visibility="gone"></ProgressBar>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tv_ssmp_text_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#d9edf7"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:text="@string/tv_ssmp_text_message"
                android:textSize="25sp"
                />

            <TextView
                android:id="@+id/tv_ssmp_text_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:text="@string/tv_ssmp_text_error"
                android:textSize="25sp"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#dff0d8"
                android:textColor="#3c763d"
                android:padding="12dp"
                android:textSize="25sp"
                android:visibility="gone"

                />
            <TextView
                android:id="@+id/tv_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#f8d7da"
                android:textColor="#f2dede"
                android:padding="12dp"
                android:textSize="25sp"
                android:layout_margin="10dp"
                android:hint="@string/tv_ssmp_text_error"
                android:visibility="gone"
                />
            <Button
                android:id="@+id/b_to_accept_call"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#8259b8"
                android:textColor="#FFFFFF"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textSize="30sp"
                android:text="@string/b_to_accept_call" />

            <Button
                android:id="@+id/b_new_appeal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="#286090"
                android:text="Поиск пациента в базе"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <Spinner
                android:id="@+id/s_ssmp_resoult"
                android:padding="12dp"
                android:textSize="25sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/s_ssmp_resoult"

                />

            <EditText
                android:id="@+id/et_ssmp_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_ssmp_note"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:textColor="#333333"
                android:padding="12dp"
                android:textSize="25sp"
                android:inputType="text" />

            <Button
                android:id="@+id/b_add_event_ssmp_local"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#530000"
                android:textColor="#FFFFFF"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textSize="30sp"
                android:text="@string/et_ssmp_add_event_ssmp_local"
                />

        </LinearLayout>
    </LinearLayout>
</ScrollView>