<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_main_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:id="@+id/et_search_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="true"
                android:hint="@string/et_search_date"
                android:inputType="date"
                android:padding="12dp"
                android:textSize="25sp"
                />
            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="48dp"
                android:visibility="gone"
                />
            <Button
                android:id="@+id/b_search_send"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="#337AB7"
                android:text="@string/b_search_send"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/et_search_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_search_result_line"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:textSize="25sp"
                android:background="#fcf8e3"
                android:visibility="gone" />
            <TextView
                android:id="@+id/et_search_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/error_message"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:textSize="25sp"
                android:background="#f2dede"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_new_appeal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/error_message"
                android:padding="10dp"
                android:textSize="30sp"
                android:layout_margin="10dp"
                android:background="#dff0d8"
                android:visibility="gone" />

            <ProgressBar
                android:id="@+id/pb_loader_indicator"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:visibility="gone" />
            <ListView
                android:id="@+id/listView"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="10dp"
                android:padding="5dp" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>